[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/default_0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/default.png" type="Texture" id=2]
[ext_resource path="res://Tile.gd" type="Script" id=3]

[node name="Tile" type="Node2D"]
position = Vector2( 50, 50 )
script = ExtResource( 3 )

[node name="TileUnopened" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TileOpened" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Proximity" type="Label" parent="."]
visible = false
modulate = Color( 0, 0.415686, 1, 1 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
text = "2"
align = 1
valign = 2
max_lines_visible = 1

[node name="Control" type="Control" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
